--- a/public/css/Animacion/estilos_animacion_cuy.css
+++ b/public/css/Animacion/estilos_animacion_cuy.css
@@ -62,20 +62,7 @@ a {
 	-ms-animation: none !important;
 	animation: none !important;
 } 
-
-
-
-
 .borde-lateral {
-	/*text-shadow:
-	-0.2rem -0.2rem 1rem #fff,
-	0.2rem 0.2rem 1rem #fff,
-	0 0 2rem var(--neon-text-color),
-	0 0 4rem var(--neon-text-color),
-	0 0 6rem var(--neon-text-color),
-	0 0 8rem var(--neon-text-color),
-	0 0 10rem var(--neon-text-color);*/
-
 	box-shadow:
 	0 0 .1rem #fff,
 	inset 0 0 .1rem #fff,
@@ -83,9 +70,6 @@ a {
 	inset 0 0 1rem var(--neon-lateral-border-color),
 	0 0 1rem var(--neon-lateral-border-color),
 	inset 0 0 1rem var(--neon-lateral-border-color);        
-	/*animation: borde_lateral 1s ease alternate;
-	-moz-animation: borde_lateral 1s ease infinite;
-	-webkit-animation: borde_lateral 1s ease infinite;*/
 }
 
 .borde {
@@ -98,9 +82,6 @@ a {
 	/*text-shadow: 0 0 1vw #FA1C16, 0 0 3vw #FA1C16, 0 0 10vw #FA1C16, 0 0 10vw #FA1C16, 0 0 .4vw #FED128, .5vw .5vw .1vw #806914;*/
 	text-shadow: 0 0 1vw #FA1C16, 0 0 3vw #FA1C16, 0 0 10vw #FA1C16, 0 0 10vw #FA1C16, 0 0 0.4vw #FED128, 0.2vw 0.3vw 0.1vw #806914;
 	color: #FED128;
-	/*animation: neon 1s ease infinite;
-	-moz-animation: neon 1s ease infinite;
-	-webkit-animation: neon 1s ease infinite;*/
 }
 
 
@@ -247,10 +228,9 @@ a {
 
 
 .cuy_cargando{
-
 	width:100%;height:100%;position:absolute;z-index: 10;background: 
 	rgba(0, 0, 0, 0) url(/images/imgCuyCargando.jpg) no-repeat scroll center center / 100% 100%
-	;z-index:2000;background-repeat: no-repeat;background-position: center center;background.size:100% 100%
+	;z-index:2000;background-repeat: no-repeat;background-position: center center;background-size:100% 100%
 }
 #DIV_GANADOR{
 /*#img_ganador{*/
@@ -282,7 +262,7 @@ a {
 	z-index:10;
 }
 #DIV_ESTADISTICA{
-	z-index:1000;
+	/* z-index:1000; */
 	position:absolute;
 	top:0;
 	right:0;
@@ -292,30 +272,27 @@ a {
 }
 
 #DIV_PAGOSHISTORIAL{
-
-	z-index:1000;
+	/* z-index:1000; */
 	position:absolute;
 	top:0;
 	left:0;
 	/*background-color:#13502e;*/
 	height:100vh;
 	width:20vw;
-
-
 }
 
 
-table{				
+#VISTA_CUY table{				
 	width:90%;
 	margin:auto;
 }
-table {
+#VISTA_CUY table {
 	border-collapse: collapse;
 }
-table, th, td {
+#VISTA_CUY table,#VISTA_CUY  th,#VISTA_CUY  td {
 	border: 2px solid white;				
 }
-tr{
+#VISTA_CUY  tr{
 	height: 3vh;
 }
 
@@ -372,32 +349,24 @@ border-radius:1vh;
 }
 
 
-h1 {
+#VISTA_CUY h1 {
 	color: #d7ceb2;	text-shadow: 3px 3px 0px #2c2e38, 5px 5px 0px #5c5f72;
 	font-size: 25px;
 	letter-spacing: 6px;
 	margin-top:10px;margin-bottom:10px;
 }
-
-
 .smaller {
 	font-size: 36px;
 	vertical-align: .2em;
 }
-
-
 @font-face {
 	font-family: RosewoodStd-Regular;
 	src: url(../../fonts/RosewoodStd-Regular.otf) format("truetype");
 }
-
 @font-face {
 	font-family: golden;
 	src: url(../../fonts/2198979.otf) format("truetype");
 }
-
-
-
 /*////////////////////////*/
 .glass {
 	background: #D8D4D5;
@@ -513,38 +482,6 @@ overflow: hidden;
 left: 36%;
 top:4%;*/
 }
-/*
-.cargador_termometro_vertical:after {
-  content: "";
-  position: absolute;
-  top: -110%;
-  left: -210%;
-  width: 300%;
-  height: 500%;
-  opacity: 0;
-  transform: rotate(200deg);
-  
-  background: rgba(255, 255, 255, 0.13);
-  background: linear-gradient(
-    to right, 
-    rgba(255, 255, 255, 0.13) 0%,
-    rgba(255, 255, 255, 0.13) 77%,
-    rgba(255, 255, 255, 0.5) 92%,
-    rgba(255, 255, 255, 0.0) 100%
-  );
-}
-.cargador_termometro_vertical:hover:after {
-  opacity: 1;
-  top: -30%;
-  left: -30%;
-  transition-property: left, top, opacity;
-  transition-duration: 0.7s, 0.7s, 0.15s;
-  transition-timing-function: ease;
-}
-*/
-
-
-
 
 .inner_vertical {
 	width: 100%;
@@ -556,11 +493,6 @@ top:4%;*/
 	border-radius: inherit;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 8px 1px rgba(255, 255, 255, 0.1), inset 0 -2px 1px rgba(255, 255, 255, 0.1);
 }
-
-
-
-
-
 
 .termometro {
 	width: 40%;
@@ -580,15 +512,15 @@ top:4%;*/
 	display:flex;justify-content: center;align-items: center
 }
 .contador_activacion{
-	                width:37%;
-	                height:7%;         
-	                    position:absolute;bottom:0%;
-	                    font-size:2.1vh;
-	                    display:flex;align-items: center;justify-content: flex-end;
-	                    font-weight: bold;
-	                    right:4%;
-text-shadow:0 1px 2px rgba(0, 0, 0, 1);
-font-family: "Oswald",Helvetica,Arial,sans-serif;
+	width:37%;
+	height:7%;         
+	position:absolute;bottom:0%;
+	font-size:2.1vh;
+	display:flex;align-items: center;justify-content: flex-end;
+	font-weight: bold;
+	right:4%;
+	text-shadow:0 1px 2px rgba(0, 0, 0, 1);
+	font-family: "Oswald",Helvetica,Arial,sans-serif;
 }
 
 
@@ -700,7 +632,7 @@ font-family: "Oswald",Helvetica,Arial,sans-serif;
 	overflow: hidden;
 }
 
-h2{
+#VISTA_CUY h2{
 	padding: 7px 0px 19px 0px;
 	background: url(../../images/right_h_bg.png) top left repeat;
 	height: 15px;
@@ -740,7 +672,7 @@ h2{
 	text-shadow: 0px 0px 1px rgba(0, 0, 0, 1);
 }
 
-table tr th{
+#VISTA_CUY table tr th{
 	padding-top: 3px;
 	padding-bottom: 0px;
 }
@@ -829,7 +761,7 @@ table tr th{
     	margin-top: 33%;
 	}
 	/* big landscape tablets, laptops, and desktops */ 
-}*/
+/*}*/
 @media (min-width:1281px) { 
 	
 	h1{
@@ -874,14 +806,14 @@ table tr th{
 
 	h2{
 		padding-top: 7px;
-    height: 30px;
-    padding-bottom: 3px;
-    font-size: 26px;
-    margin-bottom: 10px;
-    margin-top: 12px;
-    margin-left: 14px;
-        border-left: 1px solid #244458;
-            border-right: 1px solid #244458;
+		height: 30px;
+		padding-bottom: 3px;
+		font-size: 26px;
+		margin-bottom: 10px;
+		margin-top: 12px;
+		margin-left: 14px;
+		border-left: 1px solid #244458;
+		border-right: 1px solid #244458;
 	}
 	/* hi-res laptops and desktops */ 
 }
@@ -949,8 +881,8 @@ table tr th{
 	font-family: RosewoodStd-Regular;
 	position: absolute;
 	font-size: 40vh;
-display:flex;align-items: flex-end;justify-content: center;
-bottom:4%;left:45%;
+	display:flex;align-items: flex-end;justify-content: center;
+	bottom:4%;left:45%;
 	height: 58%;
 	width:49%;
 }
@@ -971,12 +903,9 @@ bottom:4%;left:45%;
 
 
 /**estilos ventana principal*/
-
-
-
 .image_apuesta_div {
-		height: 90%;
-		width:75%;
+	height: 90%;
+	width:75%;
 	border: 3px solid #22394c;
 	background-color: #1f1f1f;
 	-webkit-box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 1);
@@ -993,7 +922,6 @@ bottom:4%;left:45%;
 		height:100%;
 		width:60%;
 	}
-
 .imagen_izq_div{
 width: 100%; display: flex; align-items: center; justify-content: center;
  height: 20%;
@@ -1084,14 +1012,14 @@ box-sizing: border-box;border-bottom:2px solid white;
 	height: 100%; ; width: 50%; 
 }
 .fila_color_x_div2{
-height: 33.33%;
- /*display: flex; align-items: center; justify-content: center;*/
- display: flex; align-items: center; justify-content: flex-end;
- padding-right:40%;
-  width: 100%; background-color: #800040;
-border-bottom: 2px solid white;
-box-sizing:border-box;
-box-shadow:0 -1.15em 0 -0.34em rgba(0, 0, 0, 0.17) inset 
+	height: 33.33%;
+	/*display: flex; align-items: center; justify-content: center;*/
+	display: flex; align-items: center; justify-content: flex-end;
+	padding-right:40%;
+	width: 100%; background-color: #800040;
+	border-bottom: 2px solid white;
+	box-sizing:border-box;
+	box-shadow:0 -1.15em 0 -0.34em rgba(0, 0, 0, 0.17) inset 
 }
 .fila_color_x_div2:nth-last-child(1){
 	border-bottom: 0px
@@ -1101,15 +1029,12 @@ box-shadow:0 -1.15em 0 -0.34em rgba(0, 0, 0, 0.17) inset
 	justify-content:center;align-items: center;
 	border-right:2px solid white;
 }
-
-
 .fila_tabla_x_div2{
 	box-sizing:border-box;
 	width: 50%; height: 100%; 
 	align-items: center; justify-content: flex-end;display:flex;padding-right:20%;
 
 }
-
 .historial_titulo_div {
 	width:100%;
 	height:5%;
@@ -1132,8 +1057,6 @@ box-shadow:0 -1.15em 0 -0.34em rgba(0, 0, 0, 0.17) inset
 	 font-size: 3.1vh; 
 	 text-transform: uppercase;
 }
-
-
 .estadistica_titulo_div {
 	width:100%;
 	height:5%;
@@ -1156,7 +1079,6 @@ box-shadow:0 -1.15em 0 -0.34em rgba(0, 0, 0, 0.17) inset
 	 font-size: 3.1vh; 
 	 text-transform: uppercase;
 }
-
 
 .ultimoseventos_div {
 	width:100%;
@@ -1204,7 +1126,7 @@ box-shadow:0 -1.15em 0 -0.34em rgba(0, 0, 0, 0.17) inset
 
 .estadistica_tabla_fila_div div{
 	box-shadow:0 -1.3em 0 -0.34em rgba(0, 0, 0, 0.17) inset
-/*box-shadow:0 -0.6em 0 -0.34em rgba(0, 0, 0, 0.17) inset*/
+	/*box-shadow:0 -0.6em 0 -0.34em rgba(0, 0, 0, 0.17) inset*/
 }
 .estadistica_tabla_fila_final_div{
 	width:100%;
@@ -1213,7 +1135,7 @@ box-shadow:0 -1.15em 0 -0.34em rgba(0, 0, 0, 0.17) inset
 	justify-content:center;
 	align-items:center;
 	font-size:1.8vh;
-font-weight: bold;
+	font-weight: bold;
 	border-bottom:2px solid white;
 
 box-sizing:border-box;
@@ -1282,31 +1204,25 @@ width:90%;height:95%;
 
 }
 .estadisticas2_contenido_div>div {
-width:100%;
-/*height:14.2%;*/
-height:13.2%;
+	width:100%;
+	/*height:14.2%;*/
+	height:13.2%;
 
 	box-sizing: border-box;
-font-family: "Oswald",Helvetica,Arial,sans-serif
+	font-family: "Oswald",Helvetica,Arial,sans-serif
 }
 .estadisticas2_div_espacio{
 	width:100%;
-height:1.52% !important;
+	height:1.52% !important;
 }
 
 .estadisticas2_docenas_div{
 	border:2px solid white;
-width:100%;height:14.2%;display:flex;align-items:center
-
+	width:100%;height:14.2%;display:flex;align-items:center
 }
-
-
 .estadisticas2_docenas_div>div:nth-last-child(1){/**/
 	width:16.67%;height:100%	;
 	display:flex;align-items:center;justify-content: center
-	/*;border-top:2px solid white;*/
-	/*;border-bottom:2px solid white;*/
-	/*;border-right:2px solid white;*/
 }
 .estadisticas2_docenas_div>div:nth-last-child(1){
 border-right:0px;
@@ -1319,7 +1235,7 @@ border-right:0px;
 
 .estadisticas2_colores_div{
 	border:2px solid white;
-width:100%;height:14.2%;display:flex;align-items:center
+	width:100%;height:14.2%;display:flex;align-items:center
 
 }
 
@@ -1330,15 +1246,15 @@ width:33.333%;height:100%;
 }
 
 .estadisticas2_colores_div>div{
-font-weight: bold;
-box-shadow: 0 -1.2em 0 -0.34em rgba(0, 0, 0, 0.17) inset;
+	font-weight: bold;
+	box-shadow: 0 -1.2em 0 -0.34em rgba(0, 0, 0, 0.17) inset;
 	display:flex;align-items:center;justify-content: center;
-width:33.333%;height:100%;
+	width:33.333%;height:100%;
 	;border-right:2px solid white;box-shadow: 0 -0.6em 0 -0.34em rgba(0, 0, 0, 0.17) inset
-font-weight:bold;
+	;font-weight:bold;	
 }
 .estadisticas2_colores_div>div:nth-last-child(1){
-border-right:0px;
+	border-right:0px;
 }
 .estadisticas2_hotcold_tabla_div{
 text-shadow: 0 0 1px rgba(0, 0, 0, 1);
@@ -1381,38 +1297,26 @@ font-family: monospace !important;
 .estadisticas2_rangos{
 	background-color:#4d586c;
 }
-
-
-
 .contador_para_activar{
 	position: absolute; left: 70%; bottom: 4%; height: 10%; z-index: 222; display: flex; align-items: center; justify-content: center; font-size: 4vh; width: 9%;
 }
-
-
-
 /*historial div*/
 .historial_div{
 	width:100%;height:49%;display:flex;align-items:center;justify-content:center;
 }
-
 .historial_tabla{
 	width:90%;height:95%;border:2px solid white;box-sizing: border-box;
-
 	font-size:2.5vh;font-weight: bold;font-family: "Oswald",Helvetica,Arial,sans-serif
 }
-
 .fila_historial{
 	width:100%;height:8.33%;display:flex;
 	border-top:2px solid white;
 	box-sizing: border-box;
 }
-
 .fila_historial>div:first{
 	border-top:0px solid white;
 	box-shadow: 0 -1.3em 0 -0.34em rgba(0, 0, 0, 0.17) inset /*box-shadow:0 -0.6em 0 -0.34em rgba(0, 0, 0, 0.17) inset;; */
-
 }
-
 .fila_historial>div{
 	width:50%;height:100%;
 	display:flex;align-items: center; justify-content: center;
@@ -1452,12 +1356,7 @@ font-family: "Oswald",Helvetica,Arial,sans-serif;
 }
 
 
-
-
 /*ESTILOS GANADOR*/
-
-
-
 .imagen_juego{
 
 	display: flex; align-items: center; justify-content: center; position: absolute; 
@@ -1468,15 +1367,12 @@ font-family: "Oswald",Helvetica,Arial,sans-serif;
 
 	width:100%;height:100%
 }
-
 .off{
     -webkit-transform:scale(0);
     -moz-transform:scale(0);
     -ms-transform:scale(0);
     -o-transform:scale(0);
     transform:scale(0);
-    
-
 }
 
 .DIV_GANADOR_EFECTO
@@ -1494,8 +1390,6 @@ font-family: "Oswald",Helvetica,Arial,sans-serif;
 {
 	width:60%;height:100%;position:absolute;left:20%;top:0%;
 }
-
-
 .contenedor_cubo_ganador{
 	-webkit-transition:-webkit-transform 3s;
     -moz-transition:-moz-transform 3s;
