--- a/public/css/caja/estilos_caja.css
+++ b/public/css/caja/estilos_caja.css
@@ -1,29 +1,19 @@
-
-/*clases tabla*/
-/*.TOMBOLACUY{
-	height:85vh;
-}
-*/
-
 .CONTENEDOR_TOMBOLACUY{
 	align-items: center;
-display: flex;
-height: 100%;
-justify-content: center;
-padding: 53px 3px 3px 53px;
-position: absolute;
-right: 0;
-top: 0;
-width: 100%;
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	padding: 53px 3px 3px 53px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 100%;
 }
 .TOMBOLACUY
 {
-	/*text-shadow: 0px 1px 2px rgba(0, 0, 0, 1);*/
 	width: 100%; 
 	height: 100%;
 }
-
-
 .contenedor_tablaprincipal{
 	border:4px solid rgb(19, 71, 128);
 	height:58%;
@@ -54,15 +44,9 @@ width: 100%;
 				 0 0 5px rgba(0, 0, 0, 0.4), 
 				 inset 0 -15px 10px rgba(0, 0, 0, 0.25);
 }
-
-.rowcabecera_nombres div span{
-
-}
-
 .rowcabecera_nombres div:nth-last-child(1) {
 	border-right:0px;
 }
-
 .rowcabecera_nombres{
 	background-color:rgb(39,40,44);
 	width:100%;
@@ -94,8 +78,6 @@ width: 100%;
 	border-right:0px;
 }
 
-
-
 .rowcabecera_datos{
 	background-color:rgb(72,72,70);width:100%;
 	/*display:table-row;*/
@@ -108,7 +90,6 @@ width: 100%;
 	background-color:rgb(172, 168, 157);
 	border:7px solid rgb(172, 168, 157);
 }
-
 
 .row_pleno{
 	width:100%;
@@ -145,7 +126,6 @@ display:flex;align-items: center;justify-content: center;
 	border:3px solid rgb(172, 168, 157);
 
 }
-
 .tabla_pleno{
 	width:100%;height:56%
 }
@@ -198,7 +178,6 @@ display:flex;align-items: center;justify-content: center;
 	height:100%;
 }
 
-
 #numeros_tabla2{
 	width  : 100%;
 	float :left;
@@ -232,10 +211,6 @@ display:flex;align-items: center;justify-content: center;
 	width:12.5%;
 	float:left;
 	border:1px solid white;
-	/*height:10vh;*/
-	/*line-height:10vh;*/
-	/*vertical-align:middle;*/
-	/*text-align:center;*/
 	color:white;
 	font-weight: bold;
 	border-radius:5px;
@@ -248,7 +223,6 @@ display:flex;align-items: center;justify-content: center;
 	justify-content: center;
 
 }
-
 
 .numeros_rect2{
 
@@ -274,11 +248,6 @@ display:flex;align-items: center;justify-content: center;
 	width:14.606%;
 	float:left;
 	border:3px solid gray;
-
-	/*height:10vh;*/
-	/*line-height:10vh;*/
-	/*vertical-align:middle;*/
-	/*text-align:center;*/
 	color:white;
 	font-weight: bold;
 	border-radius:13px;
@@ -497,14 +466,13 @@ align-items: center;
 }
 .historial{
 	display: inline-block;
-	text-align:center
+	text-align:center;
 	width:17%;
 	height:25px;
 	vertical-align:middle;
 	font-size:2vh;
 	color:white;
 	background:rgb(100,111,156) ;
-
 
 }
 .historial_numeros{
@@ -632,10 +600,7 @@ padding-right:2%;
 .rowtablaeventos{
 	width:100%;
 	height:45%;
-	/*font-size:13px;*/
 	font-size:1.6vh;
-	/*overflow:auto;*/
-	/*background-image: url(../images/tablafondo.png) /*no-repeat center center*/*/
 }
 
 .rowtablaeventos table>tbody>tr>td{
@@ -795,66 +760,29 @@ display:flex;width:100%;height:90%;align-items: center; justify-content: baselin
 	background-color:rgb(150,150,150);
 
 }
-
-/*.table-stripedVenta{
+table.table-stripedVenta {
 	margin-bottom:0px !important;
-
-
+	width: 100%;
+	border-spacing: 0;
+	border: 2px solid black;width:100%;
 }
-.table-stripedVenta thead{
+table.table-stripedVenta thead{
 	background-color:rgb(36,36,37);
 }
-.table-stripedVenta thead>tr{
-	display:block;
-}
-.table-stripedVenta thead>tr>th{
-	color:white;
-	width:25%;
-}
-.table.table-stripedVenta > tbody {
-	color:white;
-	overflow:auto;display:block;
-	width:100%;
-	height:155px		;
-}
-.table.table-stripedVenta > tbody > tr:nth-of-type(2n+1) {
-    background-color:rgb(192,183,176);
-    font-weight:bold;
-
+table.table-stripedVenta th,
+table.table-stripedVenta td,
+table.table-stripedVenta tr,
+table.table-stripedVenta thead,
+table.table-stripedVenta tbody {
+	display: block; 
 }
 
-.table.table-stripedVenta > tbody > tr:nth-of-type(2n) {
-    font-weight:bold;
-    background-color:rgb(159,159,157);
-
-    }*/
-
-    /*************/////////////
-    table.table-stripedVenta {
-    	margin-bottom:0px !important;
-    	width: 100%;
-    	border-spacing: 0;
-    	border: 2px solid black;width:100%;
-    }
-    table.table-stripedVenta thead{
-    	background-color:rgb(36,36,37);
-    }
-    table.table-stripedVenta th,
-    table.table-stripedVenta td,
-    table.table-stripedVenta tr,
-    table.table-stripedVenta thead,
-    table.table-stripedVenta tbody {
-
-    	display: block; 
-
-    }
-
-    table.table-stripedVenta thead tr {
-    	/*width: 97%;
-    	width: -webkit-calc(100% - 16px);
-    	width:    -moz-calc(100% - 16px);
-    	width:         calc(100% - 16px);*/
-    }
+table.table-stripedVenta thead tr {
+	/*width: 97%;
+	width: -webkit-calc(100% - 16px);
+	width:    -moz-calc(100% - 16px);
+	width:         calc(100% - 16px);*/
+}
 
     table.table-stripedVenta tr:after {
     	content: ' ';
@@ -982,14 +910,11 @@ display:flex;width:100%;height:90%;align-items: center; justify-content: baselin
     	width:300px;
     	display:table;
     }
-
-
     .ticket div {
     	width:100%;
     	display:table-row;
     }
     /*FIN CLASES  TICKET IMPRIMIR*/
-
 
     .rowcabecera_datos div:not(div){
     	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), inset 0 -3px 2px rgba(0, 0, 0, 0.12), 0 5px 5px rgba(0, 0, 0, 0.4), 0 0 5px rgba(0, 0, 0, 0.4), inset 0 -15px 10px rgba(0, 0, 0, 0.25);
@@ -1003,17 +928,17 @@ display:flex;width:100%;height:90%;align-items: center; justify-content: baselin
 .table-stripedVenta thead tr th{
     	text-align:center;
     }
-
-
 .divboton{
-
-	border:1px solid white;display:flex;justify-content: center;align-items: center;width:90%;height:90%
+	border:1px solid white;display:flex;justify-content: center;align-items: center;width:90%;height:90%;
 }
 .cabeza_modal{
-
-	width: 100%;height:100%;display:flex;margin-bottom:10px;margin-top:10px
+	width: 100%;height:100%;display:flex;margin-bottom:10px;margin-top:10px;
 }
 .cerrar_modal{
-width:10%;display:flex;align-items: center; justify-content:center;cursor:pointer;font-size:15px
-	
+	width:10%;
+	display:flex;
+	align-items: center;
+	justify-content:center;
+	cursor:pointer;
+	font-size:15px;
 }
